# panic-attacker

./: .editorconfig  .gitattributes  AI.a2ml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  FUTURE-IMPROVEMENTS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TOPOLOGY.md  VISION.md  panic-attacker.toml.example
.claude/: CLAUDE.md
.github/workflows/: cargo-audit.yml  codeql.yml  coverage.yml  dependency-review.yml  hypatia-scan.yml  mirror.yml  quality.yml  rsr-antipattern.yml  rust-ci.yml  scan-and-report.yml  scorecard.yml  security-policy.yml
.machine_readable/: ECOSYSTEM.scm  META.scm  STATE.scm
docs/: ambush-timeline.md  attack-profiles.md  codebase-annotations.md  json-schema.md  panll-export.md  release-prep.md
examples/: attack_harness.rs  vulnerable_program.rs
man/: panic-attack.1
profiles/: attack-profile.example.json  attack-profile.example.yaml
reports/: panic-attack-20260209184225.json  panic-attack-20260209184225.ncl  panic-attack-20260209184444.yaml  panic-attack-20260211180017-panll.json  panic-attack-20260211180017.json  panic-attack-20260211180017.ncl  panic-attack-20260211180017.yaml
runtime/: Containerfile
runtime/abduct/abduct-20260211191053/: main.rs
runtime/amuck/: main.amuck.001.rs
runtime/scripts/: build-pack-verify.sh
scripts/: blackbox_stress.py
src/: diagnostics.rs  lib.rs  main.rs  sweep.rs  types.rs
src/a2ml/: mod.rs
src/abduct/: mod.rs
src/adjudicate/: mod.rs
src/ambush/: mod.rs  timeline.rs
src/amuck/: mod.rs
src/assail/: analyzer.rs  mod.rs  patterns.rs
src/attack/: executor.rs  mod.rs  profile.rs  strategies.rs
src/audience/: mod.rs
src/axial/: mod.rs
src/i18n/: catalog.rs  iso639.rs  mod.rs
src/kanren/: core.rs  crosslang.rs  mod.rs  rules.rs  strategy.rs  taint.rs
src/panll/: mod.rs
src/report/: diff.rs  formatter.rs  generator.rs  gui.rs  migration.rs  mod.rs  output.rs  sarif.rs  tui.rs
src/signatures/: engine.rs  mod.rs  rules.rs
src/storage/: mod.rs
src/xray/: analyzer.rs  mod.rs  patterns.rs
tests/: analyzer_tests.rs  integration.rs  pattern_tests.rs  regression_tests.rs  sarif_tests.rs  sweep_tests.rs
verisimdb-data/verisimdb/: panic-attack-20260209184444.json
