# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "panic-attack"
version = "1.0.1"
edition = "2021"
rust-version = "1.85.0"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
license-file = "LICENSE"
description = "Universal stress testing and logic-based bug signature detection"
repository = "https://github.com/hyperpolymath/panic-attacker"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
chrono = "0.4"
encoding_rs = "0.8"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "panic-attack"
path = "src/main.rs"
