# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "panic-attack"
version = "2.0.0"
edition = "2021"
rust-version = "1.85.0"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license-file = "LICENSE"
description = "Universal static analysis, stress testing, and logic-based bug signature detection for 47 languages"
repository = "https://github.com/hyperpolymath/panic-attacker"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
chrono = "0.4"
filetime = "0.2"
encoding_rs = "0.8"
crossterm = "0.26"
eframe = "0.27"
rayon = "1.10"
blake3 = { version = "1.5", features = ["mmap"] }
sha2 = "0.10"
hex = "0.4"
getrandom = "0.2"
walkdir = "2.5"
ed25519-dalek = { version = "2.1", optional = true }

[features]
default = []
signing = ["ed25519-dalek"]

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[[bin]]
name = "panic-attack"
path = "src/main.rs"
